fixed bottom of card spacing

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -172,6 +172,7 @@ margin-right: auto;
   text-align: left;
   padding-top: 60px;
   width: 560px;
+  padding-bottom: 60px;
 }
 
 
